# Simple-Rich-Trading-Journal

./: .gitignore  MANIFEST.in  README.rst  UPDATE.md  pyproject.toml
.github/: FUNDING.yml
src/SimpleRichTradingJournal/: ABOUT.md  __init__.py  __main__.py  main.py
src/SimpleRichTradingJournal/__env__/: __init__.py  _files.py  call-gui-engine.txt  plugin.py  rconfig.py
src/SimpleRichTradingJournal/__env__/#demo/: call-gui-engine.txt  journal.pkl  plugin.py  rconfig.py
src/SimpleRichTradingJournal/__env__/_upgrade/: __init__.py
src/SimpleRichTradingJournal/__ini__/: cmdl.py  logtags.py
src/SimpleRichTradingJournal/calc/: log.py  utils.py
src/SimpleRichTradingJournal/callbacks/: __init__.py  autocomplete.py  clientside.py  columnstate.py  courseupdate.py  exiting.py  main.py  note.py  onoffbuttons.py  openmodal.py  scopes.py  wingrid.py
src/SimpleRichTradingJournal/config/: msg.py
src/SimpleRichTradingJournal/config/color_theme/: __init__.py  blank.py  dark.py  light.py
src/SimpleRichTradingJournal/config/functional/: log_columns.py  performance_trailing.py  record_tags.py
src/SimpleRichTradingJournal/config/imgs/: __init__.py  cross.b64  information.b64  refresh.b64  source.txt  stats.b64
src/SimpleRichTradingJournal/config/styles/: __init__.py  balance.py  figures.py  log.py  misc.py  note.py
src/SimpleRichTradingJournal/layout/: __init__.py  about.py  autocomplet.py  balance.py  exiting.py  header.py  history.py  log.py  modal.py  note.py  statistics.py
src/SimpleRichTradingJournal/layout/make/: __init__.py  footer.py  history.py
src/SimpleRichTradingJournal/layout/make/balance/: __init__.py  balance.py
src/SimpleRichTradingJournal/layout/make/statistics/: __init__.py  performance.py  positions.py
src/SimpleRichTradingJournal/things/: 00_init.js  01_gridFunctions.js  03_autocomplete.js  04_grid.js  05_note.js  06_utils.js  07_copypaste.js  08_mark.js  09_qsearch.js  10_dragula.js  11_codemirror.js  50_misc.css  __init__.py
